refactor: port the core and module stuffs from fabric 21.6
- game objects
- ResourceLocation -> Identifier