@@ -2,7 +2,7 @@ package snownee.kiwi.util;
 
 import java.util.List;
 
-import org.jetbrains.annotations.Nullable;
+import org.jspecify.annotations.Nullable;
 
 import net.minecraft.client.gui.components.Tooltip;
 import net.minecraft.network.chat.Component;
@@ -21,11 +21,11 @@ public class MultilineTooltip {
 			return Component.empty();
 		}
 		if (components.size() == 1) {
-			return components.get(0);
+			return components.getFirst();
 		}
 		Component linebreak = Component.literal("\n");
 		return components.stream().skip(1).reduce(
-				components.get(0).copy(),
+				components.getFirst().copy(),
 				(a, b) -> a.append(linebreak).append(b),
 				(a, b) -> a.append(linebreak).append(b));
 	}
